@@ -1,3 +1,6 @@
+4-11-19
+- finished implementing readline tab completion/new command completion system
+
 4-6-19
 - almost done implementing new command completion system
 
